2002-09-29  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* audioio-resample.h: modified to inherit AUDIO_IO_PROXY
	instead of AUDIO_IO
	* audioio-reverse.h: modified to inherit AUDIO_IO_PROXY
	instead of AUDIO_IO
	* audioio-typeselect.h: modified to inherit AUDIO_IO_PROXY
	instead of AUDIO_IO
	* audioio-proxy.h (all): added
	* various: all AUDIO_IO_PROXY_XXX classes renamed 
	to AUDIO_IO_DB_XXX
	* various: AUDIO_IO_BUFFERED_PROXY renamed to 
	AUDIO_IO_DB_CLIENT

2002-08-22  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* sample-specs.h: sample conversion constants removed

2002-07-18  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-sample-conversion.h: new file
	* eca-sample-conversion_test.h: new file

2002-07-17  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* audiofx.h (class EFFECT_BASE): channels() from protected
	to public scope
	* audiofx_analysis.cpp (EFFECT_VOLUME_BUCKETS): renamed from EFFECT_ANALYZE
	(EFFECT_VOLUME_PEAK): new class

2002-06-28  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-comhelp.h: file removed

2002-06-24  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-engine.h: ECA_ENGINE::set_position_samples() added

2002-06-23  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-resources.h: removed ECA_RESOURCES::set_default()
	* eca-resources.h: ECA_RESOURCES::has_any() added

2002-05-18  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* audioio-manager.h (get_object_list): return type changed
	
2002-05-17  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* audioio-manager.h (all): added inheritance of 
	DYNAMIC_OBJECT<std::string>
	* eca-chainsetup.h (set_audio_io_manager_option): added

2002-05-16  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* audioio-proxy-server.h (set_priority): removed
	* eca-engine-driver.h (stop,exit): blocking arg dropped

2002-05-13  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* ctrl-source.h (init): arg dropped
	* ctrl-source.h (step_length): removed
	* generic-controller.h (param_number, low_range_limit, high_range_limit): removed